--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "gatsby-plugin-postcss": "2.1.2",
     "gatsby-plugin-purgecss": "4.0.0",
     "gatsby-plugin-react-helmet": "3.1.2",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-remark-images": "^3.1.7",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-filesystem": "^2.1.5",
+    "gatsby-transformer-remark": "^2.6.7",
     "graphql": "14.4.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
@@ -37,8 +42,8 @@
   },
   "devDependencies": {
     "babel-eslint": "10.0.2",
-    "eslint": "5.16.0",
-    "eslint-config-react-app": "4.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "3.11.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
