--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "author": "Taylor Bryant <taylor@bryant.io>",
   "dependencies": {
     "gatsby": "2.13.20",
+    "gatsby-image": "^2.2.6",
     "gatsby-plugin-manifest": "2.2.3",
     "gatsby-plugin-postcss": "2.1.2",
     "gatsby-plugin-purgecss": "4.0.0",
     "gatsby-plugin-react-helmet": "3.1.2",
-    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-remark-images": "^3.1.7",
-    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.7",
+    "gatsby-transformer-remark": "^2.6.9",
+    "gatsby-transformer-sharp": "^2.2.4",
     "graphql": "14.4.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "react-icons": "^3.7.0"
   },
   "keywords": [
     "gatsby",
